--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "filament/filament": "^3.3",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.6",
         "livewire/livewire": "^3.6"
     },
     "require-dev": {
