--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
+        "leaflet": "^1.9.4",
         "postcss": "^8.4.47",
         "sass": "^1.56.1",
         "tailwindcss": "^3.4.13",
